--- a/config
+++ b/config
@@ -91,7 +91,8 @@ default_floating_border pixel 3
     bindsym $mod+Shift+c exec hyprpicker -n -a
     #show/hide status bar
     bindsym $mod+Shift+t exec pgrep waybar && pkill waybar || waybar & disown
-   
+    # wallpaper switcher
+    bindsym $mod+t+h exec waypaper
     floating_modifier $mod normal
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Exit' 'swaymsg exit'
@@ -102,6 +103,10 @@ default_floating_border pixel 3
     bindsym --locked XF86MonBrightnessUp exec brightnessctl s +5%
     bindsym --locked XF86MonBrightnessDown exec brightnessctl s 5%-
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+    bindswitch --reload lid:on exec swaylock && output eDP-1 disable && systemctl suspend
+    bindswitch --reload lid:off exec output eDP-1 enable
+    bindsym $mod+ctrl+r reload
 #
 # Moving around:
 #
