--- a/config
+++ b/config
@@ -1,49 +1,29 @@
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
-exec waybar
-exec swww-daemon
+# monitor 
 
-### Variables
-#
-# Logo key. Use Mod1 for Alt.
+output HDMI-A-1 mode 3840x2160@120Hz scale 1.5 pos 0 0 
+output DP-1 mode 3840x2160@120Hz scale 2 pos 2560 244
+
+# autorun
+
+    # start wallpaper engine 
+    exec swww-daemon
+    # restore pywal cached colorscheme
+    exec wall -R
+    # restore last selected wallpaper with swww
+    exec swww restore
+
+# variables
+
 set $mod Mod4
-# Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
-# Your preferred terminal emulator
 set $term foot
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
 set $menu dmenu_path | wmenu | xargs swaymsg exec --
 
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-output eDP-1 scale 1
-
 default_border pixel 3
-
 default_floating_border pixel 3
-
-#
-
-
 
 # smart_borders on 
 # smart_gaps on
