--- a/config
+++ b/config
@@ -25,42 +25,13 @@ set $menu dmenu_path | wmenu | xargs swaymsg exec --
 default_border pixel 3
 default_floating_border pixel 3
 
-# smart_borders on 
-# smart_gaps on
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-  input "1267:12693:ELAN0678:00_04F3:3195_Touchpad" {
-      dwt enabled
-      tap enabled
-      natural_scroll enabled
-      middle_emulation enabled
-  }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
+smart_borders on 
+smart_gaps on
 
 ### Key bindings
 #
 # Basics:
-#
-
+#   
     # Start a terminal
     bindsym $mod+Return exec $term
 
@@ -69,15 +40,14 @@ default_floating_border pixel 3
 
     # lock screen 
     bindsym $mod+Ctrl+l exec swaylock --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --ring-color 000000 --key-hl-color f0f0f0
-
-    # Start your launcher
-    bindsym $mod+d exec $menu
+    
+    # launcher 
     bindsym $mod+Space exec anyrun
     bindsym $mod+Shift+c exec hyprpicker -n -a
     #show/hide status bar
     bindsym $mod+Shift+t exec pgrep waybar && pkill waybar || waybar & disown
     # wallpaper switcher
-    bindsym $mod+t+h exec waypaper
+    bindsym ctrl+$mod+t exec $HOME/.config/sway/scripts/randWall.sh > $HOME/allout.txt 2>&1
     floating_modifier $mod normal
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Exit' 'swaymsg exit'
