--- a/config
+++ b/config
@@ -5,13 +5,13 @@ output DP-2 mode 3840x2160@120Hz scale 2 pos 2560 344
 
 # autorun
 
-    exec waybar
-    # start wallpaper engine 
-    exec swww-daemon
-    # restore pywal cached colorscheme
-    exec wall -R
-    # restore last selected wallpaper with swww
-    exec swww restore
+exec waybar
+# start wallpaper engine 
+exec swww-daemon
+# restore pywal cached colorscheme
+exec wall -R
+# restore last selected wallpaper with swww
+exec swww restore
 
 # variables
 
@@ -21,7 +21,8 @@ set $down j
 set $up k
 set $right l
 set $term foot
-set $menu dmenu_path | wmenu | xargs swaymsg exec --
+
+# swayconfig (swayfx)
 
 default_border pixel 3
 default_floating_border pixel 3
@@ -33,31 +34,19 @@ gaps outer 5
 
 corner_radius 5
 
-### Key bindings
-#
-# Basics:
-#   
+## Keybinds
+# essentials  
     bindsym $mod+w exec firefox
-    # Start a terminal
     bindsym $mod+Return exec $term
-
-    # Kill focused window
     bindsym $mod+q kill
-
-    # lock screen 
     bindsym $mod+Ctrl+l exec swaylock --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --ring-color 000000 --key-hl-color f0f0f0
-    
-    # launcher 
     bindsym $mod+Space exec anyrun
     bindsym $mod+Shift+c exec hyprpicker -n -a
-    #show/hide status bar
     bindsym $mod+Shift+t exec pgrep waybar && pkill waybar || waybar & disown
-    # wallpaper switcher
     bindsym ctrl+$mod+t exec $HOME/.config/sway/scripts/randWall.sh > $HOME/allout.txt 2>&1
     floating_modifier $mod normal
-    # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Exit' 'swaymsg exit'
-
+# for laptops
     bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
     bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -68,9 +57,7 @@ corner_radius 5
     bindswitch --reload lid:on exec swaylock && output eDP-1 disable && systemctl suspend
     bindswitch --reload lid:off exec output eDP-1 enable
     bindsym $mod+ctrl+r reload
-#
-# Moving around:
-#
+# workspace related
     # Move your focus around
     bindsym $mod+$left focus left
     bindsym $mod+$down focus down
@@ -92,10 +79,7 @@ corner_radius 5
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
-#
-# Workspaces:
-#
-    # Switch to workspace
+
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
     bindsym $mod+3 workspace number 3
@@ -117,67 +101,34 @@ corner_radius 5
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-#
-# Layout stuff:
-#
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
+
+# layout    
     bindsym $mod+b splith
     bindsym $mod+v splitv
 
-    # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
     bindsym $mod+t layout tabbed
     bindsym $mod+e layout toggle split
 
-    # Make the current focus fullscreen
     bindsym $mod+f fullscreen
 
-    # Toggle the current focus between tiling and floating mode
     bindsym $mod+Shift+space floating toggle
 
-    # Swap focus between the tiling area and the floating area
     bindsym $mod+Shift+f focus mode_toggle
 
-    # Move focus to the parent container
     bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
 
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-
-  
-#
-# Resizing containers:
-#
 mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
     bindsym $left resize shrink width 10px
     bindsym $down resize grow height 10px
     bindsym $up resize shrink height 10px
     bindsym $right resize grow width 10px
 
-    # Ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
 
-    # Return to default mode
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
