--- a/config
+++ b/config
@@ -1,6 +1,9 @@
+# imports 
+include "$HOME/.cache/wal/colors-sway"
+
 # monitor 
 
-output HDMI-A-1 mode 3840x2160@120Hz scale 1.5 pos 0 0 
+output HDMI-A-1 mode 3840x2160@120Hz scale 1.5 pos 0 0
 output DP-2 mode 3840x2160@120Hz scale 2 pos 2560 344
 
 # autorun
@@ -23,6 +26,17 @@ set $right l
 set $term foot
 
 # swayconfig (swayfx)
+
+client.focused $color1 $background $foreground $color7 $background
+# class                  border  backgr.       text         indicator  child_border
+client.focused           $color1 $background   $foreground  $color7    $color1
+client.focused_inactive  $color0 $background   $foreground  $color7    $color0
+client.unfocused         $color0 $background   $foreground  $color7    $color0
+
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+# client.urgent           #2f343a #900000 #ffffff #900000   #900000
+# client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
 
 default_border pixel 3
 default_floating_border pixel 3
