--- a/config
+++ b/config
@@ -44,6 +44,7 @@ default_border pixel 3
 default_floating_border pixel 3
 
 # layer_effects "waybar" blur enable; shadows enable; corner_radius 6
+layer_effects "waybar" corner_radius 0;
 
 gaps inner 5
 gaps outer 5
@@ -67,12 +68,12 @@ corner_radius 5
     bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
     bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-    bindsym XF86MonBrightnessUp exec brillo -A 5
-    bindsym XF86MonBrightnessDown exec brillo -U 5
+    bindsym XF86MonBrightnessUp exec brillo -q -A 5 -u 300000
+    bindsym XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-    bindswitch --reload lid:on exec hyprlock && output eDP-1 disable && systemctl suspend
-    bindswitch --reload lid:off exec output eDP-1 enable
+    bindswitch --reload --locked lid:on exec hyprlock && output eDP-1 disable && systemctl suspend
+    bindswitch --reload --locked lid:off exec output eDP-1 enable
     bindsym $mod+ctrl+r reload
 
     bindgesture swipe:right workspace prev
