--- a/config
+++ b/config
@@ -26,12 +26,10 @@ set $right l
 set $term foot
 
 # swayconfig (swayfx)
-
 xwayland enable
 
-client.focused $color1 $background $foreground $color7 $background
 # class                  border  backgr.       text         indicator  child_border
-client.focused           $color1 $background   $foreground  $color7    $color1
+client.focused           $color2 $background   $foreground  $color7    $color1
 client.focused_inactive  $color0 $background   $foreground  $color7    $color0
 client.unfocused         $color0 $background   $foreground  $color7    $color0
 
@@ -66,8 +64,8 @@ corner_radius 5
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Exit' 'swaymsg exit'
 # for laptops
     bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-    bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-    bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+    bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+
+    bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%-
     bindsym XF86MonBrightnessUp exec brillo -q -A 5 -u 300000
     bindsym XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
