--- a/config
+++ b/config
@@ -1,6 +1,3 @@
-# imports
-include "./colors"
-
 # monitor
 
 output eDP-1 mode 2880x1920@120Hz pos 0 0 scale 2
@@ -21,17 +18,17 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term foot
+set $term kitty
 
 # swayconfig (swayfx)
 xwayland enable
 
-# class                  border  backgr.       text         indicator  child_border
-client.focused           $color2 $background   $foreground  $color7    $color1
-client.focused_inactive  $color0 $background   $foreground  $color7    $color0
-client.unfocused         $color0 $background   $foreground  $color7    $color0
-
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+# # class                  border  backgr.       text         indicator  child_border
+# client.focused           $color2 $background   $foreground  $color7    $color1
+# client.focused_inactive  $color0 $background   $foreground  $color7    $color0
+# client.unfocused         $color0 $background   $foreground  $color7    $color0
+#
+# client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 # client.urgent           #2f343a #900000 #ffffff #900000   #900000
 # client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
@@ -56,10 +53,10 @@ corner_radius 5
     bindsym $mod+Space exec anyrun
     bindsym $mod+Shift+c exec hyprpicker -n -a
     bindsym $mod+Shift+t exec pgrep waybar && pkill waybar || waybar & disown
-    bindsym ctrl+$mod+t exec $HOME/.config/sway/scripts/randWall.sh > $HOME/allout.txt 2>&1
+    # bindsym ctrl+$mod+t exec $HOME/.config/sway/scripts/randWall.sh > $HOME/allout.txt 2>&1
     bindsym ctrl+$mod+l exec hyprlock
     floating_modifier $mod normal
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Exit' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaynag -t warning -m 'Exiting sway. Bye!' -B 'Exit' 'swaymsg exit'
 # for laptops
     bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
     bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+
