--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 # source matugen colors
 
 include $HOME/.config/sway/sway-colors
-
+include $HOME/.config/sway/gtk-config
 # monitor
 
 output eDP-1 mode 2880x1920@120Hz pos 0 0 scale 2
@@ -69,8 +69,8 @@ corner_radius 5
     bindsym XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-    bindswitch --reload --locked lid:on exec hyprlock && systemctl suspend && output eDP-1 disable
-    bindswitch --reload --locked lid:off exec output eDP-1 enable
+    bindswitch --reload --locked lid:on exec hyprlock
+    # bindswitch --reload --locked lid:off exec output eDP-1 enable
     bindsym $mod+ctrl+r reload
 
     bindgesture swipe:right workspace prev
