--- a/config
+++ b/config
@@ -14,7 +14,8 @@ exec waybar
 exec swww-daemon
 # restore last selected wallpaper with swww
 exec swww restore
-
+exec wl-paste --watch cliphist store
+exec cliphist list | wofi --show dmenu | cliphist decode | wl-copy
 # variables
 
 set $mod Mod4
