using amixer for volume control

--- a/config
+++ b/config
@@ -8,8 +8,8 @@ output eDP-1 mode 2880x1920@120Hz pos 0 0 scale 2
 
 # autorun
 exec autotiling-rs
-exec ags
 exec waybar
+exec mako
 # start wallpaper engine
 exec swww-daemon
 # restore last selected wallpaper with swww
@@ -64,9 +64,9 @@ corner_radius 5
     bindsym $mod+Shift+e exec swaynag -t warning -m 'Exiting sway. Bye!' -B 'Exit' 'swaymsg exit'
     bindsym ctrl+$mod+i exec $HOME/.config/sway/scripts/plog.sh
 # for laptops
-    bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-    bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+
-    bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%-
+    bindsym XF86AudioMute exec amixer sset Master toggle
+    bindsym XF86AudioRaiseVolume exec amixer -q sset Master 5%+
+    bindsym XF86AudioLowerVolume exec amixer -q sset Master 5%-
     bindsym XF86MonBrightnessUp exec brillo -q -A 5 -u 300000
     bindsym XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
