--- a/config
+++ b/config
@@ -42,6 +42,7 @@ default_floating_border pixel 3
 
 # layer_effects "waybar" blur enable; shadows enable; corner_radius 6
 layer_effects "waybar" corner_radius 0;
+layer_effects "mako" blur enabled;
 
 gaps inner 5
 gaps outer 5
