--- a/config
+++ b/config
@@ -65,14 +65,14 @@ corner_radius 5
     bindsym $mod+Shift+e exec swaynag -t warning -m 'Exiting sway. Bye!' -B 'Exit' 'swaymsg exit'
     bindsym ctrl+$mod+i exec $HOME/.config/sway/scripts/plog.sh
 # for laptops
-    bindsym XF86AudioMute exec amixer sset Master toggle
-    bindsym XF86AudioRaiseVolume exec amixer -q sset Master 5%+
-    bindsym XF86AudioLowerVolume exec amixer -q sset Master 5%-
-    bindsym XF86MonBrightnessUp exec brillo -q -A 5 -u 300000
-    bindsym XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
-    bindsym XF86AudioPlay exec playerctl play-pause
-    bindsym XF86AudioPrev exec playerctl previous
-    bindsym XF86AudioNext exec playerctl next
+    bindsym --locked XF86AudioMute exec amixer sset Master toggle
+    bindsym --locked XF86AudioRaiseVolume exec amixer -q sset Master 5%+
+    bindsym --locked XF86AudioLowerVolume exec amixer -q sset Master 5%-
+    bindsym --locked XF86MonBrightnessUp exec brillo -q -A 5 -u 300000
+    bindsym --locked XF86MonBrightnessDown exec brillo -q -U 5 -u 300000
+    bindsym --locked XF86AudioPlay exec playerctl play-pause
+    bindsym --locked XF86AudioPrev exec playerctl previous
+    bindsym --locked XF86AudioNext exec playerctl next
     bindsym --locked XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
     bindswitch --reload --locked lid:on exec hyprlock
