--- a/colors.conf
+++ b/colors.conf
@@ -4,10 +4,10 @@
 # Window: border, background, text, indicator, child_border
 
 #Windows                 #border  #background  #text    #indicator  #child_border
-client.unfocused           #3b4279  #3b4279  #dfe0ff  #3b4279  #3b4279 
-client.focused         #3b4279  #131318  #2d2f42  #444559  #c4c5dd
-client.focused_inactive  #bcc2ff  #dfe0ff  #131318 
-client.placeholder       #000000  #000000  #e4e1e9
-client.urgent            #e6bad6  #5e3c54  #45263d
-client.background        #131318
+client.unfocused           #733332  #733332  #ffdad8  #733332  #733332 
+client.focused         #733332  #1a1111  #442928  #5d3f3e  #e7bdba
+client.focused_inactive  #ffb3af  #ffdad8  #1a1111 
+client.placeholder       #000000  #000000  #f0dedd
+client.urgent            #e3c28c  #594319  #412d05
+client.background        #1a1111
 
